# precise_benchmark_for_image_editing

./: README.md  create_dataset.py  create_gpt_prompts.py  create_hf_dataset_from_our_format.py  evaluate.py  pyproject.toml  requirements.txt
object_transformations/: affine.py  apply_transformations.py  compose.py  flip.py  move.py  object_transformation.py  rotate.py  scale.py
scripts/: create_gpt_prompts.py  create_realistic_dataset.py  parse_pascal_dataset.py
src/precisebenchmark/: analyze.py  create_dataset.py  create_gpt_prompts.py  create_hf_dataset_from_our_format.py  evaluate.py  evaluate.sh  handle_unsuccessful_tries.py  remove_unsuccessful_tries.py
src/precisebenchmark/object_transformations/: affine.py  compose.py  move.py  object_transformation.py  reasoning.py  rotate.py  scale.py  shear.py
src/precisebenchmark/utils/: binary_masks.py  pascal_voc_parser.py  random_variables.py
utils/: create_random_simple_shape_mask.py  pascal_voc_parser.py  set_seeds.py
